ds_lab/output/file
mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ gcc sum.c
mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ ./a.out
Enter 2 numbers : 5
7
Sum = 12
mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ gcc sum.c -o data1
mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ ./data1
Enter 2 numbers : 6
4
Sum = 10

--------------------------------------------

mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ gcc -c sum.c
mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ gcc -D debug sum.c
sum.c: In function ‘main’:
sum.c:6:21: error: invalid operands to binary & (have ‘int *’ and ‘int’)
    6 |     scanf("%d %d",&a&b);
      |                   ~~^
      |                   |
      |                   int *

--------------------------------------------------

mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ gcc sum.c -o data1 -I/Desktop/S1MCA/ds_lab/to/include

-------------------------------------------------

mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ gcc sum.c -o data1 -lm
--------------------------------------------------

mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ gcc -g  sum.c -o data
mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ gdb data
GNU gdb (Ubuntu 9.2-0ubuntu1~20.04) 9.2
Copyright (C) 2020 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.
Type "show copying" and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
    <http://www.gnu.org/software/gdb/documentation/>.

For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from data...
(gdb) run
Starting program: /home/mits/Desktop/S1MCA/ds_lab/data 
Enter 2 numbers : 10
20
Sum = 30
[Inferior 1 (process 4650) exited normally]
(gdb) quit
mits@mits-Lenovo-S510:~/Desktop/S1MCA/ds_lab$ ^C
---------------------------------------------------------------------
